# Lista_de_Presentes

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CHECKLIST_SUPABASE.md  CODE_OF_CONDUCT.md  CRIAR_ADMIN_RENDER.md  DEBUG_500_ERRORS.md  DOCKER-MINIMAL.md  DOCKER.md  Dockerfile  Dockerfile.minimal  GERAR_DADOS_TESTE_RENDER.md  GOOGLE_PLAY_STORE.md  INSTALL_UBUNTU_SERVER.md  KEEP_ALIVE.md  MIGRACAO_MYSQL_POSTGRESQL.md  MIGRATIONS_RENDER.md  NETWORK_UNREACHABLE_FIX.md  PR_SUPABASE_SCHEMA_ISOLADO.md  QUICK_START_GRUPOS.txt  README.md  README_DOCKER.md  RENDER_FREE_TIER.md  RENDER_SUPABASE_SETUP.md  SETUP_GRUPOS.md  SOCIAL_LOGIN_CONFIG.md  SUPABASE.md  SUPABASE_CONFIG.md  SUPABASE_SECURITY.md  TROUBLESHOOTING_RENDER.md  URGENTE_DATABASE_URL.md  USE_RENDER_POSTGRESQL.md  VERIFICACAO_RENDER.md  VERSIONAMENTO.md  build.sh  create_admin.py  db.sqlite3  docker-compose.dev.yml  docker-compose.minimal.yml  (+14 more)
.githooks/: pre-commit
.github/workflows/: README.md  deploy.yml  keep-alive.yml  pesquisa-precos.yml  tests.yml
docs/: README.md  prompt-ai-studio.md
docs/api/: README.md
docs/database/: MIGRACAO_IMAGENS_BASE64.md  MIGRACAO_SUPABASE_RENDER.md  SCHEMA_ISOLADO.md  SUPABASE.md  migrations.md
docs/deployment/: DOCKER.md  RENDER.md  docker.md
docs/development/: CONTRIBUTING.md
docs/features/: KEEP_ALIVE.md  SCRAPING_LOGS.md  SETUP_GRUPOS.md  TEMAS.md
docs/installation/: README.md
lista_presentes/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
oracle_migration/: 00_INSTALL_ALL.sql  01_DDL_TABELAS.sql  02_PKG_USUARIO.sql  03_PKG_PRESENTE.sql  04_PKG_COMPRA.sql  05_PKG_NOTIFICACAO.sql  06_PKG_SUGESTAO.sql  07_PKG_PUSH_NOTIFICATION.sql  08_INTEGRACAO_PUSH_APEX.sql  09_TRIGGERS_AUDITORIA.sql  10_APEX_APPLICATION.sql  11_APEX_PAGES.sql  12_MELHORIAS_SEGURANCA.sql  99_TESTES_COMPLETOS.sql  PUSH_NOTIFICATIONS_APEX.md  QUICK_START.md  README.md
oracle_migration/apex_pwa/: app.css  app.js  manifest.json  service-worker.js
presentes/: adapters.py  admin.py  apps.py  context_processors.py  error_handlers.py  forms.py  github_helper.py  models.py  pesquisa_precos.py  scrapers.py  services.py  social_validation.py  urls.py  views.py
presentes/management/commands/: criar_grupo_padrao.py  fix_admin.py  fix_migration_history.py  force_migrate.py  migrar_dados_para_grupo.py  migrate_images_to_base64.py  pesquisar_precos.py  populate_test_data.py  validar_social.py
presentes/migrations/: 0001_initial.py  0002_presente_imagem_base64_presente_imagem_nome_and_more.py  0003_grupos_sistema.py  0004_alter_grupomembro_options_and_more.py  0005_pushsubscription.py  0006_usuario_avatar.py  0007_precohistorico_pesquisaprecolog.py
presentes/templatetags/: avatar_tags.py  preco_tags.py
scripts/: README_RLS.md  check_database_config.py  create_isolated_schema.sql  enable_rls_supabase.sql  ensure_schema.py  force_migrations.sh  increment_version.py  monitor_render.sh  test_supabase_connection.py
static/: christmas-decorations.js  dark-theme.css  glassmorphism-christmas.css  manifest.json  modern-green-theme.css  purple-gradient-theme.css  sw.js
templates/: 404.html  500.html  base.html  offline.html
templates/presentes/: adicionar_presente.html  criar_grupo.html  dashboard.html  deletar_presente.html  editar_grupo.html  editar_perfil.html  editar_presente.html  esqueceu_senha.html  gerar_dados_teste.html  gerenciar_membros.html  grupos_lista.html  lista_usuarios.html  login.html  meus_presentes.html  notificacoes.html  presentes_usuario.html  redefinir_senha.html  registro.html  setup_grupos.html  ver_sugestoes.html
theme/static_src/: package-lock.json  package.json  tailwind.config.js
theme/static_src/src/: styles.css
