[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lista-presentes-natal"
version = "1.0.5"
description = "Aplicação web Django para gerenciar listas de presentes de Natal em família"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Maxwell da Silva Oliveira", email = "maxwbh@gmail.com"}
]
maintainers = [
    {name = "Maxwell da Silva Oliveira", email = "maxwbh@gmail.com"}
]
keywords = [
    "django",
    "wishlist",
    "christmas",
    "natal",
    "presentes",
    "gift",
    "lista",
    "pwa",
    "web-app",
    "family",
    "familia"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 5.0",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: Portuguese (Brazilian)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Office/Business",
    "Topic :: Software Development :: Libraries :: Application Frameworks"
]
requires-python = ">=3.11"
dependencies = [
    "Django==5.0",
    "mysqlclient==2.2.0",
    "psycopg2-binary==2.9.9",
    "djangorestframework==3.14.0",
    "django-cors-headers==4.3.1",
    "django-pwa==1.1.0",
    "anthropic==0.18.0",
    "openai==1.12.0",
    "requests==2.31.0",
    "beautifulsoup4==4.12.3",
    "lxml==5.1.0",
    "Pillow==10.2.0",
    "gunicorn==21.2.0",
    "whitenoise==6.6.0",
    "python-dotenv==1.0.0",
    "dj-database-url==2.1.0"
]

[project.urls]
Homepage = "https://github.com/Maxwbh/Lista_de_Presentes"
Documentation = "https://github.com/Maxwbh/Lista_de_Presentes#readme"
Repository = "https://github.com/Maxwbh/Lista_de_Presentes"
"Bug Reports" = "https://github.com/Maxwbh/Lista_de_Presentes/issues"
Changelog = "https://github.com/Maxwbh/Lista_de_Presentes/blob/main/CHANGELOG.md"
Demo = "https://lista-presentes-0hbp.onrender.com"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-django>=4.5.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "flake8>=6.1.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
    "django-stubs>=4.2.0",
    "pre-commit>=3.3.3"
]
docs = [
    "sphinx>=7.1.0",
    "sphinx-rtd-theme>=1.3.0",
    "sphinx-autodoc-typehints>=1.24.0"
]
test = [
    "pytest>=7.4.0",
    "pytest-django>=4.5.0",
    "pytest-cov>=4.1.0",
    "coverage>=7.3.0",
    "factory-boy>=3.3.0",
    "faker>=19.3.0"
]

[project.scripts]
lista-presentes = "manage:main"

[tool.setuptools]
packages = ["lista_presentes", "presentes"]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["*.html", "*.css", "*.js", "*.json", "*.svg", "*.png", "*.jpg", "*.ico"]

[tool.black]
line-length = 100
target-version = ["py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_glob = ["*/migrations/*"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "lista_presentes.settings"
python_files = ["test_*.py", "*_test.py", "tests.py"]
addopts = [
    "--cov=lista_presentes",
    "--cov=presentes",
    "--cov-report=html",
    "--cov-report=term-missing",
    "--strict-markers",
    "-v"
]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests"
]

[tool.coverage.run]
source = ["lista_presentes", "presentes"]
omit = [
    "*/migrations/*",
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/venv/*",
    "*/env/*"
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
plugins = ["mypy_django_plugin.main"]

[[tool.mypy.overrides]]
module = "*.migrations.*"
ignore_errors = true

[tool.django-stubs]
django_settings_module = "lista_presentes.settings"

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "E266", "E501", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    "migrations",
    "venv",
    "env"
]
max-complexity = 10
